# fogg

./: .gitignore  CMakeLists.txt  README.md  \  package.xml
configs/: rviz.rviz
include/fogg/: EuclideanClusterExtraction.hpp  clustering.hpp  fogg_node.hpp  occupancy.hpp
launch/: fogg.launch
src/: EuclideanClusterExtraction.cpp  clustering.cpp  fogg_node.cpp  occupancy.cpp  pcl_example.cpp  pcl_test.cpp
